testsuites/LLT/compiler/Diagnose/lex_test/lex_illegal_symbol_in_string_interpolation/case1.expect.out
error: unknown start of token: \
  ==> case1.cj:14:13:
   | 
14 |     "cangjie ${\}"
   |                ^ unknown start of token: \
   | 

1 error generated, 1 error printed.
